--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.vs
 /obj
 /bin
+/Source/VegetableBox/bin
+/Source/VegetableBox/obj
+/Source/VegetableBox/obj/Debug
+/Source/.vs
+Source/.vs/VegetableBox/v17/.suo
+/Source/VegetableBox/obj/Debug/net6.0-windows
