Finish Vendor Invoice Entry

--- a/Source/VegetableBox/VegetableBox.csproj
+++ b/Source/VegetableBox/VegetableBox.csproj
@@ -11,12 +11,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Accounts\ByUseNewFileCreation\**" />
-    <EmbeddedResource Remove="Accounts\ByUseNewFileCreation\**" />
-    <None Remove="Accounts\ByUseNewFileCreation\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Content Include="Images\VBLogo.ico" />
   </ItemGroup>
 
@@ -39,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Accounts\ByUseNewFileCreation\" />
     <Folder Include="Font\" />
   </ItemGroup>
 
