Update Daily Account Closing

--- a/Source/VegetableBox/VegetableBox.csproj
+++ b/Source/VegetableBox/VegetableBox.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Accounts\ClsFrmUndiyalCreditDebitt.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Images\VBLogo.ico" />
   </ItemGroup>
 
@@ -33,7 +37,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Accounts\ByUseNewFileCreation\" />
     <Folder Include="Font\" />
   </ItemGroup>
 
