--- a/Source/VegetableBox/VegetableBox.csproj
+++ b/Source/VegetableBox/VegetableBox.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Accounts\ByUseNewFileCreation\" />
+    <Folder Include="ByUseNewFileCreation\" />
     <Folder Include="Font\" />
   </ItemGroup>
 
