Stock option provide in Product Master

--- a/Source/VegetableBox/App.config
+++ b/Source/VegetableBox/App.config
@@ -3,7 +3,7 @@
 	<connectionStrings>
 		<add name="SqlConnection"
 			 connectionString="Data Source=ATHIRATHAN;
-                            Initial Catalog=VBOX2324_LIVE;
+                            Initial Catalog=VBOX2526_PHASE2;
                             User Id=sa;
                             Password=athi@123;" />
 
@@ -16,7 +16,7 @@
 	
 	<appSettings>
 		<add key="SqlServerName" value="ATHIRATHAN"/>
-		<add key="SqlDatabaseName" value="VBOX2324_LIVE"/>
+		<add key="SqlDatabaseName" value="VBOX2526_PHASE2"/>
 		<add key="SqlServerUserId" value="sa"/>
 		<add key="SqlServerPassword" value="athi@123"/>
 	</appSettings>
